--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ conda-content-trust @ file:///tmp/build/80754af9/conda-content-trust_16170455945
 conda-package-handling @ file:///C:/ci/conda-package-handling_1618262320430/work
 contextily==1.3.0
 cryptography @ file:///C:/ci/cryptography_1639472366776/work
+CurrencyConverter==0.17.6
 cycler @ file:///tmp/build/80754af9/cycler_1637851556182/work
 debugpy @ file:///C:/ci/debugpy_1637073815078/work
 decorator @ file:///opt/conda/conda-bld/decorator_1643638310831/work
